# simple-video-compare

./: .gitignore  Cargo.toml  README.md  build-linux.sh  build.ps1  build.sh  go.mod  go.sum
.hermes/plans/: 2026-07-08_151737-dasiwa-simple-video-compare.md
cmd/dasiwa-simple-video-compare/: main.go  web_assets_test.go
cmd/dasiwa-simple-video-compare/web/: index.html
cmd/dasiwa-simple-video-compare/web/css/: app.css
cmd/dasiwa-simple-video-compare/web/js/: api.js  app.js  compare.js  dropzone.js  filebrowser.js  player.js
internal/app/: browser.go  launcher_test.go
internal/compare/: compare.go  compare_test.go
internal/media/: tools.go  tools_test.go
internal/player/: mpv.go
internal/server/: config.go  handlers_browse.go  handlers_health.go  handlers_media.go  handlers_shutdown.go  handlers_video.go  json.go  routes.go  server.go  server_test.go
lib/: libmpv.so.2.5.0
src/: main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
