[package]
name = "dasiwa-simple-video-compare"
version = "0.1.0"
edition = "2021"

[dependencies]
egui = "0.29"
eframe = { version = "0.29", features = ["default"] }
image = "0.25"
serde_json = "1"
walkdir = "2"
dirs = "5"
hex = "0.4"
sha1 = "0.10"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
